objects/Document_Request__c.object
<CustomObject>
    <fields>
        <fullName>ReturnAddress_Address2__c</fullName>
        <formula>if ( 
ISPICKVAL(Return_Address_Location__c, &apos;Central&apos;), 
&apos;5005 North River Blvd., N.E.&apos;, 
&apos;&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Address 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnAddress_Address3__c</fullName>
        <formula>if ( 
ISPICKVAL(Return_Address_Location__c, &apos;Central&apos;), 
&apos;Cedar Rapids, IA 52411-6634&apos;, 
&apos;&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Address 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnAddress_Phone__c</fullName>
        <formula>if (
  ISPICKVAL(Return_Address_Location__c, &apos;Central&apos;),
  &apos;(800) 279-9032&apos;,
  &apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Return Address Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnDocument__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReturnEnvelope__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return Envelope</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Return_Address_Location__c</fullName>
        <label>Return Address Location</label>
        <picklist>
            <picklistValues>
                <fullName>Central</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SourceFormIdentifier1__c</fullName>
        <label>Source Form Identifier1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_SubSystemName__c</fullName>
        <label>Sub System Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_SystemName__c</fullName>
        <label>System Name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Render Form Service Status (Success, Failure)</description>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Callout_Error_Response__c</fullName>
        <label>Sync Callout Error Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sync_Callout_Response_Status__c</fullName>
        <label>Sync Callout Response Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Callout_XML_Request__c</fullName>
        <label>Sync Callout XML Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Target_SystemName__c</fullName>
        <description>Target System Name(FileNet, Documentum)</description>
        <label>System Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleStorageAgent_Address1__c</fullName>
        <label>Vehicle Storage Agent Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleStorageAgent_Address2__c</fullName>
        <label>Vehicle Storage Agent Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleStorageAgent_City__c</fullName>
        <label>Vehicle Storage Agent City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleStorageAgent_Name__c</fullName>
        <label>Vehicle Storage Agent Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleStorageAgent_Phone__c</fullName>
        <label>Vehicle Storage Agent Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleStorageAgent_State__c</fullName>
        <label>Vehicle Storage Agent State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleStorageAgent_ZipCode__c</fullName>
        <label>Vehicle Storage Agent ZipCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleStorageLocation_Address1__c</fullName>
        <label>Vehicle Storage Location Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleStorageLocation_Address2__c</fullName>
        <label>Vehicle Storage Location Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleStorageLocation_City__c</fullName>
        <label>Vehicle Storage Location City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleStorageLocation_State__c</fullName>
        <label>Vehicle Storage Location State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VehicleStorageLocation_ZipCode__c</fullName>
        <label>Vehicle Storage Location ZipCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <label>Vehicle Make</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year__c</fullName>
        <label>Vehicle Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WaterMarkText__c</fullName>
        <label>Water Mark Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Document Request</label>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Document Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Requests</pluralLabel>
    <recordTypes>
        <fullName>Notice_of_Sale</fullName>
        <active>true</active>
        <label>Notice of Sale</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rights_Letter_Doc_Request</fullName>
        <active>true</active>
        <label>Rights Letters</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>